# tuubacrypt

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: pythonpackage.yml
tests/: test_deck.py  test_tuubacrypt.py
tuubacrypt/: __init__.py  cli.py  crypt.py  deck.py  helpers.py
