[tool.poetry]
name = "tuubacrypt"
version = "0.3.2"
description = "TuubaCrypt - the least useful encryption and decryption algorithm."
authors = ["Niko Heikkilä <yo@nikoheikkila.fi>"]
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/nikoheikkila/tuubacrypt"
keywords = ["kata", "encryption", "decryption", "algorithms"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.scripts]
tcrypt = "tuubacrypt.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
pylint = "^2.4.4"
black = "^19.10b0"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
